tests/baselines/reference/typeAliasDoesntMakeModuleInstantiated.errors.txt
typeAliasDoesntMakeModuleInstantiated.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== typeAliasDoesntMakeModuleInstantiated.ts (1 errors) ====
    declare module m {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        // type alias declaration here shouldnt make the module declaration instantiated
        type Selector = string| string[] |Function;
    
        export interface IStatic {
            (selector: any /* Selector */): IInstance;
        }
        export interface IInstance { }
    }
    declare var m: m.IStatic; // Should be ok to have var 'm' as module is non instantiated